Bot_V2/src/objects/Known_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Dashboard_Report_Id__c</fullName>
        <label>Dashboard/Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Id__c</fullName>
        <label>Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Keyword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einstein Keyword</label>
        <referenceTo>Einstein_Keyword__c</referenceTo>
        <relationshipLabel>Known Issues</relationshipLabel>
        <relationshipName>Known_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Due_Date__c</fullName>
        <label>Estimated Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message_Summary__c</fullName>
        <inlineHelpText>The message simplified by the Admin.</inlineHelpText>
        <label>Message Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <inlineHelpText>The message as provided by the user.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_List_ObjectName__c</fullName>
        <label>Object List ObjectName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Highest (1)</fullName>
                </value>
                <value>
                    <fullName>High (2)</fullName>
                </value>
                <value>
                    <fullName>Normal (3)</fullName>
                </value>
                <value>
                    <fullName>Low (4)</fullName>
                </value>
                <value>
                    <fullName>Lowest (5)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Detail_Id__c</fullName>
        <label>Record Detail Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Issue</label>
        <referenceTo>Known_Issue__c</referenceTo>
        <relationshipLabel>Related Issues</relationshipLabel>
        <relationshipName>Related_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Duplicated</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visualforce_Page_Name__c</fullName>
        <label>Visualforce Page Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
  
    <label>Known Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KI-{0000}</displayFormat>
        <label>Known Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known Issues</pluralLabel>
    <recordTypes>
        <fullName>Dashboard_Report</fullName>
        <active>true</active>
        <label>Dashboard &amp; Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Documents</fullName>
        <active>true</active>
        <label>Documents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Template</fullName>
        <active>true</active>
        <label>Email Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>Object_List</fullName>
        <active>true</active>
        <label>Object List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Package</fullName>
        <active>true</active>
        <label>Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Detail</fullName>
        <active>true</active>
        <label>Record Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unknown</fullName>
        <active>true</active>
        <label>Unknown</label>
    </recordTypes>
    <recordTypes>
        <fullName>Visualforce_Pages</fullName>
        <active>true</active>
        <label>Visualforce Pages</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>